[package]
name = "mnemonic"
version = "1.1.1"
authors = ["Matt Brubeck <mbrubeck@limpet.net>", "Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
license = "MIT"
description = "Encode any data into a sequence of English words"
repository = "https://github.com/mbrubeck/rust-mnemonic"
documentation = "https://docs.rs/mnemonic"
keywords = ["passphrase", "wordlist", "phonetic", "code", "mnemonicode"]
edition = "2021"
rust-version = "1.70.0"

[dev-dependencies]
quickcheck = "1.0"
